--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ cache:
     - $HOME/bin
     
 before_install:
-  - sudo apt-get install -y gsl-devel
+  - sudo apt-get install -y libgsl-dev
 
 r_packages:
   - bookdown
