--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ cache:
     
 before_install:
   - sudo apt-get install -y libgsl-dev
+  - echo "CXX14 = g++" >> ~/.R/Makevars
+  - echo "CXX14FLAGS = -O3" >> ~/.R/Makevars
 
 r_packages:
   - bookdown
