--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ cache:
     
 before_install:
   - sudo apt-get install -y libgsl-dev
+  - mkdir ~/.R
   - echo "CXX14 = g++" > ~/.R/Makevars
   - echo "CXX14FLAGS = -O3" >> ~/.R/Makevars
 
