--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ cache:
     - $HOME/bin
     
 before_install:
-  - sudo apt-get install -y libgsl-dev libv8-dev libudunits2-dev
+  - sudo apt-get install -y libgsl-dev libv8-dev libudunits2-dev libgdal-dev libgeos-dev libproj-dev
   - mkdir ~/.R
   - echo "CXX_STD = CXX14" > ~/.R/Makevars
   - echo "CXX14 = g++" >> ~/.R/Makevars
